[package]
name = "stdint"
version = "0.1.0"
authors = ["Markus Mayer <widemeadows@gmail.com", "Vojtech Kral <vojtech@kral.hk>"]
license = "BSD-2-Clause"
description = "C99 stdint types for easier interop"
homepage = "https://github.com/sunsided/stdint-rs"
repository = "https://github.com/sunsided/stdint-rs"
readme = "README.md"
keywords = ["C99", "types", "stdint"]
categories = ["hardware-support"]

build = "build.rs"

[build-dependencies]
bindgen = "0.63.0"
