[package]
name = "stdint"
version = "0.3.0-unstable"
authors = ["Markus Mayer <widemeadows@gmail.com>", "Vojtech Kral <vojtech@kral.hk>"]
license = "BSD-2-Clause"
description = "C99 stdint/stdio types for easier interop"
homepage = "https://github.com/sunsided/stdint-rs"
repository = "https://github.com/sunsided/stdint-rs"
readme = "README.md"
keywords = ["C99", "types", "stdint"]
categories = ["hardware-support", "no-std"]
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = []

[build-dependencies]
bindgen = "0.69.4"
